src/objects/Sandbox_Refresh__mdt.object
<CustomObject>
    <description>Sandbox Refreshes Metadata</description>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checks if the Class is active</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_of_Execution__c</fullName>
        <description>Order of Execution</description>
        <label>Order of Execution</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Run_In_All_Sandboxes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Run In All Sandboxes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sandbox_Name__c</fullName>
        <description>This is a comma separated Sandbox names.  If this field is not updated, then Run_In_All_Sandboxes to true.</description>
        <label>Sandbox Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Sandbox Refresh</label>
    <pluralLabel>Sandbox Refrehes</pluralLabel>
</CustomObject>